[package]
name = "greattraits"
version = "0.1.0"
authors = ["Deniz Sincar <deniz.r1oaz.ru>"]
edition = "2021"
description = "My own collection for traits extending standard library types"
readme = "README.md"
repository = "https://github.com/denizsincar29/greattraits"
license = "MIT"
keywords = ["std", "extend", "traits"]


[dependencies]
# No dependencies, only std